Truncated less override files and includes, fixed some styling

--- a/app/styles/less/dashboard.less
+++ b/app/styles/less/dashboard.less
@@ -2,9 +2,14 @@
  * Base structure
  */
 
+/*
+ * Variables
+ */
 @sidebar-margin: 20px;
-@sidebar-bg: lighten(@brand-success, 50%);
-@sidebar-hover: ligten(@brand-success, 40%);
+@sidebar-bg: lighten(@brand-info, 40%);
+@sidebar-hover: darken(@brand-info, 15%);
+@sidebar-border: 1px solid lighten(@gray-light, 40%);
+
 /* Move down content because we have a fixed navbar that is 50px tall */
 body {
   padding-top: 50px;
@@ -17,7 +22,7 @@ body {
 
 .sub-header {
   padding-bottom: 10px;
-  border-bottom: 1px solid @gray-lighter;
+  border-bottom: @sidebar-border;
 }
 
 /*
@@ -26,6 +31,7 @@ body {
  */
 .navbar-fixed-top {
   border: 0;
+  border-bottom: @sidebar-border;
 }
 
 /*
@@ -46,8 +52,14 @@ body {
       overflow-x: hidden;
       overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
       background-color: @sidebar-bg;
-      border-right: 1px solid @gray-lighter;
+      border-right: @sidebar-border;
   }
+}
+
+/* Use as a mixin */
+.nav-active-link {
+    color: lighten(@link-color, 80%);
+    background-color: @sidebar-hover;
 }
 
 /* Sidebar navigation */
@@ -59,13 +71,12 @@ body {
     padding-right: @sidebar-margin;
     padding-left: @sidebar-margin;
     &:hover, &:focus {
-      background-color: @sidebar-hover;
+      .nav-active-link;
     }
   }
   > .active > a {
     &, &:hover, &:focus {
-      color: lighten(@link-color, 80%);
-      background-color: @brand-success;
+      .nav-active-link;
     }
   }
 }
@@ -76,12 +87,12 @@ body {
  */
 
 .main {
-  padding: 20px;
+  padding: @sidebar-margin;
   .page-header {
     margin-top: 0
   }
   @media screen and (min-width: @screen-sm-min) {
-    padding-right: 40px;
-    padding-left: 40px;
+    padding-right: @sidebar-margin * 2;
+    padding-left: @sidebar-margin * 2;
   }
 }
